<resources>
    <string name="app_name">Geography</string>
    <string name="activity_results_title">Results</string>
    <string name="activity_map_quiz_title">Find country on map</string>
    <string name="activity_flag_quiz_title">Flag quiz</string>
    <string name="activity_quiz_title">Quiz</string>
    <string name="x_of_y">%1$d of %2$d</string>
    <string name="hello_world">Hello world!</string>
    <string name="question">Question</string>
    <string name="action_settings">Settings</string>
    <plurals name="quiz_point_got_message">
        <item quantity="one">You got %d point!</item>
        <item quantity="other">You got %d points!</item>
    </plurals>
    <string name="quiz_point_count">Point count:</string>
    <string name="quiz_try_count">Tries left:</string>
    <string name="quiz_question_from">from</string>
    <string name="quiz_question_flag_quiz_question">To which country this flag belongs?</string>
    <string name="country_view_flag_label">Flag</string>
    <string name="country_view_flag_content_description">Flag of state</string>
    <string name="country_view_anthem_label">Anthem</string>
    <string name="country_view_population_label">Population</string>
    <string name="country_view_capital_city_label">Capital city</string>
    <string name="country_view_area_label">Area</string>
    <string name="country_view_area_km2">km2</string>
    <plurals name="country_view_currency_label">
        <item quantity="one">Currency</item>
        <item quantity="other">Currencies</item>
    </plurals>
    <plurals name="country_view_language_label">
        <item quantity="one">Language</item>
        <item quantity="other">Languages</item>
    </plurals>
    <plurals name="results_points_got_message">
        <item quantity="one">You have got %1$d point from %2$d!</item>
        <item quantity="other">You have got %1$d points from %2$d!</item>
    </plurals>
    <plurals name="quiz_tries_left">
        <item quantity="one">You have one try left!</item>
        <item quantity="other">You have %d tries left!</item>
    </plurals>
    <string name="results_percent">%d%%</string>
    <string name="quiz_good_job">Good job! You made it! The country was %s!</string>
    <string name="quiz_good_luck_next_time">Maybe you get it next time! The country was %s!</string>
    <string name="ax_name_common">Åland Islands</string>
    <string name="ax_name_official">Åland Islands</string>
    <string name="ax_capital">Mariehamn</string>
    <string name="al_name_common">Albania</string>
    <string name="al_name_official">Republic of Albania</string>
    <string name="al_capital">Tirana</string>
    <string name="ad_name_common">Andorra</string>
    <string name="ad_name_official">Principality of Andorra</string>
    <string name="ad_capital">Andorra la Vella</string>
    <string name="at_name_common">Austria</string>
    <string name="at_name_official">Republic of Austria</string>
    <string name="at_capital">Vienna</string>
    <string name="be_name_common">Belgium</string>
    <string name="be_name_official">Kingdom of Belgium</string>
    <string name="be_capital">Brussels</string>
    <string name="bg_name_common">Bulgaria</string>
    <string name="bg_name_official">Republic of Bulgaria</string>
    <string name="bg_capital">Sofia</string>
    <string name="ba_name_common">Bosnia and Herzegovina</string>
    <string name="ba_name_official">Bosnia and Herzegovina</string>
    <string name="ba_capital">Sarajevo</string>
    <string name="by_name_common">Belarus</string>
    <string name="by_name_official">Republic of Belarus</string>
    <string name="by_capital">Minsk</string>
    <string name="ch_name_common">Switzerland</string>
    <string name="ch_name_official">Swiss Confederation</string>
    <string name="ch_capital">Bern</string>
    <string name="cy_name_common">Cyprus</string>
    <string name="cy_name_official">Republic of Cyprus</string>
    <string name="cy_capital">Nicosia</string>
    <string name="cz_name_common">Czech Republic</string>
    <string name="cz_name_official">Czech Republic</string>
    <string name="cz_capital">Prague</string>
    <string name="de_name_common">Germany</string>
    <string name="de_name_official">Federal Republic of Germany</string>
    <string name="de_capital">Berlin</string>
    <string name="dk_name_common">Denmark</string>
    <string name="dk_name_official">Kingdom of Denmark</string>
    <string name="dk_capital">Copenhagen</string>
    <string name="es_name_common">Spain</string>
    <string name="es_name_official">Kingdom of Spain</string>
    <string name="es_capital">Madrid</string>
    <string name="ee_name_common">Estonia</string>
    <string name="ee_name_official">Republic of Estonia</string>
    <string name="ee_capital">Tallinn</string>
    <string name="fi_name_common">Finland</string>
    <string name="fi_name_official">Republic of Finland</string>
    <string name="fi_capital">Helsinki</string>
    <string name="fr_name_common">France</string>
    <string name="fr_name_official">French Republic</string>
    <string name="fr_capital">Paris</string>
    <string name="fo_name_common">Faroe Islands</string>
    <string name="fo_name_official">Faroe Islands</string>
    <string name="fo_capital">Tórshavn</string>
    <string name="gb_name_common">United Kingdom</string>
    <string name="gb_name_official">United Kingdom of Great Britain and Northern Ireland</string>
    <string name="gb_capital">London</string>
    <string name="gg_name_common">Guernsey</string>
    <string name="gg_name_official">Bailiwick of Guernsey</string>
    <string name="gg_capital">St. Peter Port</string>
    <string name="gi_name_common">Gibraltar</string>
    <string name="gi_name_official">Gibraltar</string>
    <string name="gi_capital">Gibraltar</string>
    <string name="gr_name_common">Greece</string>
    <string name="gr_name_official">Hellenic Republic</string>
    <string name="gr_capital">Athens</string>
    <string name="hr_name_common">Croatia</string>
    <string name="hr_name_official">Republic of Croatia</string>
    <string name="hr_capital">Zagreb</string>
    <string name="hu_name_common">Hungary</string>
    <string name="hu_name_official">Hungary</string>
    <string name="hu_capital">Budapest</string>
    <string name="im_name_common">Isle of Man</string>
    <string name="im_name_official">Isle of Man</string>
    <string name="im_capital">Douglas</string>
    <string name="ie_name_common">Ireland</string>
    <string name="ie_name_official">Republic of Ireland</string>
    <string name="ie_capital">Dublin</string>
    <string name="is_name_common">Iceland</string>
    <string name="is_name_official">Iceland</string>
    <string name="is_capital">Reykjavik</string>
    <string name="it_name_common">Italy</string>
    <string name="it_name_official">Italian Republic</string>
    <string name="it_capital">Rome</string>
    <string name="je_name_common">Jersey</string>
    <string name="je_name_official">Bailiwick of Jersey</string>
    <string name="je_capital">Saint Helier</string>
    <string name="xk_name_common">Kosovo</string>
    <string name="xk_name_official">Republic of Kosovo</string>
    <string name="xk_capital">Pristina</string>
    <string name="li_name_common">Liechtenstein</string>
    <string name="li_name_official">Principality of Liechtenstein</string>
    <string name="li_capital">Vaduz</string>
    <string name="lt_name_common">Lithuania</string>
    <string name="lt_name_official">Republic of Lithuania</string>
    <string name="lt_capital">Vilnius</string>
    <string name="lu_name_common">Luxembourg</string>
    <string name="lu_name_official">Grand Duchy of Luxembourg</string>
    <string name="lu_capital">Luxembourg</string>
    <string name="lv_name_common">Latvia</string>
    <string name="lv_name_official">Republic of Latvia</string>
    <string name="lv_capital">Riga</string>
    <string name="mc_name_common">Monaco</string>
    <string name="mc_name_official">Principality of Monaco</string>
    <string name="mc_capital">Monaco</string>
    <string name="md_name_common">Moldova</string>
    <string name="md_name_official">Republic of Moldova</string>
    <string name="md_capital">Chișinău</string>
    <string name="mk_name_common">Macedonia</string>
    <string name="mk_name_official">Republic of Macedonia</string>
    <string name="mk_capital">Skopje</string>
    <string name="mt_name_common">Malta</string>
    <string name="mt_name_official">Republic of Malta</string>
    <string name="mt_capital">Valletta</string>
    <string name="me_name_common">Montenegro</string>
    <string name="me_name_official">Montenegro</string>
    <string name="me_capital">Podgorica</string>
    <string name="nl_name_common">Netherlands</string>
    <string name="nl_name_official">Netherlands</string>
    <string name="nl_capital">Amsterdam</string>
    <string name="no_name_common">Norway</string>
    <string name="no_name_official">Kingdom of Norway</string>
    <string name="no_capital">Oslo</string>
    <string name="pl_name_common">Poland</string>
    <string name="pl_name_official">Republic of Poland</string>
    <string name="pl_capital">Warsaw</string>
    <string name="pt_name_common">Portugal</string>
    <string name="pt_name_official">Portuguese Republic</string>
    <string name="pt_capital">Lisbon</string>
    <string name="ro_name_common">Romania</string>
    <string name="ro_name_official">Romania</string>
    <string name="ro_capital">Bucharest</string>
    <string name="ru_name_common">Russia</string>
    <string name="ru_name_official">Russian Federation</string>
    <string name="ru_capital">Moscow</string>
    <string name="sj_name_common">Svalbard and Jan Mayen</string>
    <string name="sj_name_official">Svalbard og Jan Mayen</string>
    <string name="sj_capital">Longyearbyen</string>
    <string name="sm_name_common">San Marino</string>
    <string name="sm_name_official">Most Serene Republic of San Marino</string>
    <string name="sm_capital">City of San Marino</string>
    <string name="rs_name_common">Serbia</string>
    <string name="rs_name_official">Republic of Serbia</string>
    <string name="rs_capital">Belgrade</string>
    <string name="sk_name_common">Slovakia</string>
    <string name="sk_name_official">Slovak Republic</string>
    <string name="main_menu_map_quizzes">Map quizzes</string>
    <string name="main_menu_quizzes">Quizzes</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_learning">Learning</string>
    <string name="find_country_on_map_by_flag">Find country on map by its flag</string>
    <string name="find_country_on_map_by_name">Find country on map by its name</string>
    <string name="find_country_on_map_by_capital">Find country on map by its capital</string>
    <string name="user_settings">User settings</string>
    <string name="language_settings">Language settings</string>
    <string name="select_default_language">Select language</string>
    <string name="select_default_language_summary">Choose language from available translations</string>
    <string name="enable_users">Enable users</string>
    <string name="enable_users_summary">Use multiple users?</string>
    <string name="users">Users</string>
    <string name="users_summary">Add or remove users</string>
    <string name="select_default_user">Select default user</string>
    <string name="settings_about_application">About application</string>
    <string name="settings_about_application_summary">Author, version etc.</string>
    <string name="settings_about_media">Media</string>
    <string name="settings_about_media_summary">Media used in this application</string>
    <string name="nickname">Nickname</string>
    <string name="easy_difficulty">Easy difficulty</string>
    <string name="moderate_difficulty">Moderate difficulty</string>
    <string name="hard_difficulty">Hard difficulty</string>
</resources>