<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:theme="@style/MyMaterialTheme">

    <EditText
        android:hint="@string/nickname"
        android:id="@+id/user_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/difficulty_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:checked="true"
            android:id="@+id/easy_difficulty"
            android:text="@string/easy_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/moderate_difficulty"
            android:text="@string/moderate_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/hard_difficulty"
            android:text="@string/hard_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>

</LinearLayout>