<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:contex=".MapQuizMenuActivity">

    <!--ROW-->
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:onClick="openFindCountryByCapital"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#ffd500">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/skyline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true" />

                <TextView
                    android:layout_weight="0"
                    android:paddingTop="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/find_country_on_map_by_capital"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:onClick="openFindCountryByFlag"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#3a78ff"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/flag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true" />

                <TextView
                    android:paddingTop="20dp"
                    android:layout_weight="0"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/find_country_on_map_by_flag"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
    <!--END ROW-->

    <!--ROW-->
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:onClick="openFindCountryByName"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#ff4346"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true" />

                <TextView
                    android:paddingTop="20dp"
                    android:layout_weight="0"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/find_country_on_map_by_name"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#000"
            android:gravity="center">

        </RelativeLayout>

    </LinearLayout>
    <!--END ROW-->

</LinearLayout>